testsuite/tests/ext_annotations/gen/invalidation/v2/main_c.c

int
ident (int x)
{
  // Useless
  return x;
}

int
main ()
{
  return 0;
}
